--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "flowbite-react": "^0.8.0",
+    "formik": "^2.4.6",
     "next": "^14.2.22",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-query": "^3.39.3",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^20",
